Fix TestAttributeMapUtil for readKeys